# front-end-modules

./: Descriptors.c  Descriptors.h  LMS64C_protocol.h  LimeSDR-Sony.c  LimeSDR-Sony.h  LimeSDR-Sony.hex  README.md  global.h  makefile
LimeSDR_PA_LNA/: README.md  ReleaseNotes.txt  readme.txt~
LimeSDR_PA_LNA/firmware/src/: LMS64C_protocol.h  LimeSDR-Sony.c  LimeSDR-Sony.pnproj  LimeSDR-Sony.pnps  makefile
LimeSDR_PA_LNA/gui/pa_setup/: MIMO_Setup_ChA_ChB_v1.ini  MIMO_Setup_ChA_ChB_v1.ini.csv  SISO_Setup_ChA_ChB_v1.ini  SISO_Setup_ChA_ChB_v1.ini.csv
LimeSDR_PA_LNA/gui/src/: CMakeLists.txt  ErrorReporting.cpp  ErrorReporting.h  LimeSuiteConfig.h  lms7suite.fbp  lms7suiteApp.cpp  lms7suiteApp.h  lms7suiteAppFrame.cpp  lms7suiteAppFrame.h  lms7suiteApp_gui.cpp  lms7suiteApp_gui.h  resource.rc  splash_image.h
LimeSDR_PA_LNA/gui/src/ConnectionEVB7COM/: CMakeLists.txt  ConnectionEVB7COM.cpp  ConnectionEVB7COM.h  ConnectionEVB7COMEntry.cpp
LimeSDR_PA_LNA/gui/src/ConnectionRegistry/: BuiltinConnections.in.cpp  CMakeLists.txt  ConnectionHandle.cpp  ConnectionHandle.h  ConnectionRegistry.cpp  ConnectionRegistry.h  IConnection.cpp  IConnection.h
LimeSDR_PA_LNA/gui/src/cpp-feather-ini-parser/: INI.h
LimeSDR_PA_LNA/gui/src/lms7suiteEvents/: CMakeLists.txt  lms7suiteEvents.cpp  lms7suiteEvents.h
LimeSDR_PA_LNA/gui/src/protocols/: ADCUnits.h  CMakeLists.txt  LMS64CCommands.h  LMS64CProtocol.cpp  LMS64CProtocol.h  LMSBoards.h
LimeSDR_PA_LNA/gui/src/sonyPA/: sonyPA_wxgui.cpp  sonyPA_wxgui.h
LimeSDR_PA_LNA/gui/src/utilities_gui/: CMakeLists.txt  SPI_wxgui.cpp  SPI_wxgui.h  dlgConnectionSettings.cpp  dlgConnectionSettings.h  dlgDeviceInfo.cpp  dlgDeviceInfo.h  dlgFullMessageLog.cpp  dlgFullMessageLog.h  pnlMiniLog.cpp  pnlMiniLog.h  utilities_gui.cpp  utilities_gui.fbp  utilities_gui.h
LimeSDR_PA_LNA/hardware/: COPYING
LimeSDR_PA_LNA/hardware/v1r3/: ReleaseNotes.txt
LimeSDR_PA_LNA/hardware/v1r3/BOM/: LimeSDR_Sony-BOM v.1.r3.xlsx  LimeSDR_Sony-pick_place_v2.pos
LimeSDR_PA_LNA/hardware/v1r3/Gerbers/: LimeSDR_Sony-B.Mask.gbs  LimeSDR_Sony-B.Paste.gbp  LimeSDR_Sony-B.SilkS.gbo  LimeSDR_Sony-Back.gbl  LimeSDR_Sony-Cmts.User.gbr  LimeSDR_Sony-Dwgs.User.gbr  LimeSDR_Sony-Edge.Cuts.gm1  LimeSDR_Sony-F.Mask.gts  LimeSDR_Sony-F.Paste.gtp  LimeSDR_Sony-F.SilkS.gto  LimeSDR_Sony-Front.gtl  LimeSDR_Sony-Inner1_GND.g2  LimeSDR_Sony-Inner2_Signal.g3  LimeSDR_Sony-Inner3_Signal.g4  LimeSDR_Sony-Inner4_Power.g5  LimeSDR_Sony-NPTH-drl_map.ps  LimeSDR_Sony-NPTH.drl  LimeSDR_Sony-drl_map.ps  LimeSDR_Sony.drl
LimeSDR_PA_LNA/hardware/v1r3/KiCAD/: Analog Circuits.sch  Digital Circuits.sch  LMS7002 Power Supply.sch  LMS7002EVB.dcm  LMS7002EVB.lib  LimeSDR_Sony-cache.lib  LimeSDR_Sony.cmp  LimeSDR_Sony.kicad_pcb  LimeSDR_Sony.kicad_pcb-bak  LimeSDR_Sony.lib  LimeSDR_Sony.pro  LimeSDR_Sony.sch  MYRIAD_RF.dcm  Microcontroller.sch  Power Supply.sch  RF1.sch  RF2.sch  RX_LNA chain.sch  TX_A PA chain.sch  TX_B PA chain.sch
LimeSDR_PA_LNA/hardware/v1r3/KiCAD/Lib/: power.bak  power.bck  power.dcm  power.lib
LimeSDR_PA_LNA/hardware/v1r3/KiCAD/LimeSDR-Sony.pretty/: 6TMLF.kicad_mod  LED_0603_GR.kicad_mod  LimeSDR_Logo.kicad_mod  Pinhead_1x3_SMD.kicad_mod  Pinhead_2x6_SMD.kicad_mod  QFN32.kicad_mod  SMA.kicad_mod  SW_B3U-1000P.kicad_mod  VQFN32.kicad_mod  XO_4DFN.kicad_mod  microUSB2.kicad_mod  mounting_via_2.kicad_mod
LimeSDR_PA_LNA/hardware/v1r3/Manufacturing/: ReadMe.txt
LimeSDR_PA_LNA/hardware/v1r3/Reports/: LimeSDR_Sony-drl.rpt  LimeSDR_Sony.cmp  LimeSDR_Sony.drc.rpt  LimeSDR_Sony.erc  LimeSDR_Sony.net
LimeSDR_SAW/: README.md
LimeSDR_SAW/1v0/: LimeSDR_SAW_readme_r0.txt
LimeSDR_SAW/1v0/BOM/: uLimeSDR_antenna_board_1v0_BOMr0.xls
LimeSDR_SAW/1v0/DRC/: LimeSDR_SAW_1v0.html
LimeSDR_SAW/1v0/ERC/: LimeSDR_SAW_1v0.html
LimeSDR_SAW/1v0/Gerber/: LimeSDR_SAW_1v0.EXTREP  LimeSDR_SAW_1v0.GBL  LimeSDR_SAW_1v0.GBO  LimeSDR_SAW_1v0.GBP  LimeSDR_SAW_1v0.GBS  LimeSDR_SAW_1v0.GM1  LimeSDR_SAW_1v0.GM14  LimeSDR_SAW_1v0.GM15  LimeSDR_SAW_1v0.GPB  LimeSDR_SAW_1v0.GPT  LimeSDR_SAW_1v0.GTL  LimeSDR_SAW_1v0.GTO  LimeSDR_SAW_1v0.GTP  LimeSDR_SAW_1v0.GTS  LimeSDR_SAW_1v0.REP  LimeSDR_SAW_1v0.RUL  LimeSDR_SAW_1v0.apr
LimeSDR_SAW/1v0/Gerber/__Previews/: LimeSDR_SAW_1v0.EXTREPPreview  LimeSDR_SAW_1v0.REPPreview  LimeSDR_SAW_1v0.RULPreview
LimeSDR_SAW/1v0/NC Drill/: LimeSDR_SAW_1v0.DRR  LimeSDR_SAW_1v0.LDP  LimeSDR_SAW_1v0.TXT
LimeSDR_SAW/1v0/NC Drill/__Previews/: LimeSDR_SAW_1v0.LDPPreview
LimeSDR_SAW/1v0/Pick Place/: Pick Place for LimeSDR_SAW_1v0.txt
LimeSDR_SAW/1v0/Pick Place/__Previews/: Pick Place for LimeSDR_SAW_1v0.txtPreview
libs/LUFA/: ChangeLog.txt  CompileTimeTokens.txt  DirectorySummaries.txt  Doxygen.conf  GettingStarted.txt  Groups.txt  LUFAPoweredProjects.txt  MainPage.txt  MigrationInformation.txt  SchedulerOverview.txt  VIDAndPIDValues.txt  Version.h  makefile
libs/LUFA/Common/: Common.h  FunctionAttributes.h
libs/LUFA/DriverStubs/: Buttons.h  Dataflash.h  Joystick.h  LEDs.h
libs/LUFA/Drivers/Board/: Buttons.h  Dataflash.h  Joystick.h  LEDs.h  Temperature.h
libs/LUFA/Drivers/Board/ATAVRUSBRF01/: Buttons.h  LEDs.h
libs/LUFA/Drivers/Board/Board/: Buttons.h  Joystick.h  LEDs.h
libs/LUFA/Drivers/Board/RZUSBSTICK/: LEDs.h
libs/LUFA/Drivers/Board/STK525/: Buttons.h  Dataflash.h  Joystick.h  LEDs.h
libs/LUFA/Drivers/Board/STK526/: Buttons.h  Dataflash.h  Joystick.h  LEDs.h
libs/LUFA/Drivers/Board/USBKEY/: Buttons.h  Dataflash.h  Joystick.h  LEDs.h
libs/LUFA/Drivers/Misc/: TerminalCodes.h
libs/LUFA/Drivers/Peripheral/: ADC.h  SPI.h  Serial.h  SerialStream.c  SerialStream.h
libs/LUFA/Drivers/Peripheral/AT90USBXXX67/: ADC.h
libs/LUFA/Drivers/USB/: USB.h
libs/LUFA/Drivers/USB/Class/: HIDParser.c  HIDParser.h
libs/LUFA/Drivers/USB/HighLevel/: ConfigDescriptor.c  ConfigDescriptor.h  Events.h  StdDescriptors.h  StdRequestType.h  USBInterrupt.c  USBMode.h  USBTask.c  USBTask.h
libs/LUFA/MemoryAllocator/: DynAlloc.c  DynAlloc.h
libs/LUFA/Scheduler/: Scheduler.h
libs/ringbuff/: RingBuff.c  RingBuff.h
src/: Descriptors.c  LimeSDR-Sony.h  LimeSDR-Sony.hex
(+16 files in other folders)
